# HYU-RAG

./: .gitignore  README.md  README_HYU_RAG.md  pyproject.toml  requirements-rag.txt
scripts/: build_index.py  prepare_data.py  render_report_html.py  run_demo.py
src/hyu_rag/: __init__.py  constants.py  data.py  faiss_index.py  indexing.py  retriever.py  tracing.py
tests/: test_data_prep.py
tests/fixtures/: patents_minimal.csv
