[project]
name = "hyu-rag-demo"
version = "0.1.0"
description = "HYU US patent RAG-Sequence/RAG-Token tracing demo"
requires-python = ">=3.10,<3.13"
dependencies = [
    "datasets>=2.18",
    "faiss-cpu>=1.8",
    "numpy>=1.24",
    "pandas>=2.0",
    "torch>=2.2",
    "transformers>=4.44,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
